ros/log/build_2025-02-23_22-34-15/uwb/stderr.log
  File "/home/Judy/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb.py", line 24
    from scipy import minimizesudo apt update
                                   ^^^
SyntaxError: invalid syntax

